SERVER-6656 fix SSL thread storage leak (for incoming connections only)